--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title></title>
-    <link rel="stylesheet" href="/css/main.css"  type="text/css" />
+    <link rel="stylesheet" href="{{baseUrl()}}/css/main.css"  type="text/css" />
   </head>
   <body>
     {% block main %}
     {% endblock %}
-    <script src="/js/main.js"/></script>
+    <script src="{{baseUrl()}}/js/main.js"/></script>
   </body>
 </html
